--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,9 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
       classpath:/applicationContext.xml
+      classpath:/spring-context-task.xml
+      classpath:/spring-context-task-pool.xml
+      classpath:/spring-context-task-pool-annotation.xml
     </param-value>
   </context-param>
 
